--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,14 +39,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.core:core-ktx:$versions.core_version"
+    implementation "androidx.appcompat:appcompat:$versions.appcompat_version"
+    implementation "com.google.android.material:material:$versions.materialdesign_version"
+    implementation "androidx.constraintlayout:constraintlayout:$versions.constraintlayout_version"
 
     implementation "io.insert-koin:koin-android:$versions.koin_version"
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation "junit:junit:$versions.junit_version"
+    testImplementation "io.mockk:mockk:$versions.mockk_version"
+    testImplementation "androidx.arch.core:core-testing:$versions.rule_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines_version"
 }
